--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -1,3 +1,6 @@
+
+//-shit
+
 .clearfix:after {
     content:'';
     display: table;
@@ -14,20 +17,23 @@
     transition: all .2s;
 }
 
-//variables
-$phone_upper: 600px;
-$tablet_portrait_upper: 900px;
-$tablet_landscape_upper: 1200px;
-$desktop_upper: 1800px;
-
-//screens
-.main_screen {
-	display: flex;
-	width: 100vw;
-	height: 100vh;
+*:active, *:focus {
+	outline: none;
 }
 
-//containers
+*::-moz-focus-inner {
+	border: 0;
+}
+
+//-screens
+.main_screen {
+	display: flex;
+	width: 100%;
+	min-height: 100vh;
+}
+
+
+//-containers
 .main_container-horizontal {
 	display: flex;
 	flex-direction: row;
@@ -40,80 +46,29 @@ $desktop_upper: 1800px;
 	margin: 0 auto;
 }
 
-//elements
+
+//-elements
 img {
 	width: 100%;
 	max-width: 100%;
 }
 
-
-//mixins
-@mixin SetBackground($mode, $arg) {
-	@if ($mode == solid)
-	{
-		background: $arg;
-	}
-	@else if ($mode == picture)
-	{
-		background: $arg  center 100% no-repeat;
-		background-size: cover;
-	}
+html {
+	font-size: $font_size-global * 1px;
 }
 
-@mixin SetFlexVariables($justify_content: flex-start, $align_items: flex-start)
-{
-	justify-content: $justify_content;
-	align-items: $align_items;
+.fake-div {
+	width: 100%;
+	display: block;
 }
 
-@mixin SetPaddings($up: 0, $down: 0, $right: 0, $left: 0) {
-	padding-top: $up;
-	padding-bottom: $down;
-	padding-right: $right;
-	padding-left: $left;
+.button	{
+	cursor: pointer;
+	
 }
 
-@mixin SetMargins($up: 0, $down: 0, $right: 0, $left: 0) {
-	margin-top: $up;
-	margin-bottom: $down;
-	margin-right: $right;
-	margin-left: $left;
-}
-
-@mixin SetWidth-relative ($width, $mode: desktop_up) {
-	@if($mode == phone_only) {
-		width: $width/$phone_upper * 1vw;
-	}
-	@else if ($mode == tablet_portrait_up) {
-		width: $width/$tablet_portrait_upper * 1vw;
-	}
-	@else if ($mode == tablet_landscape_up) {
-		width: $width/$tablet_landscape_upper * 1vw;
-	}
-	@else if ($mode == desktop_up) {
-		width: $width/$desktop_upper * 1vw;
-	}
-	@else if ($mode == big_desktop_up) {
-		width: $width/$desktop_upper * 1vw;
-	}
-}
-
-@mixin for-size($range) {
-  @if ($range == phone_only) {
-    @media (max-width: $phone_upper - 1) { @content; }
-  }
-  @else if ($range == tablet_portrait_up) {
-    @media (min-width: $phone_upper) { @content; }
-  }
-  @else if ($range == tablet_landscape_up) {
-    @media (min-width: $tablet_portrait_upper) { @content; }
-  }
-  @else if ($range == desktop_up) {
-    @media (min-width: $tablet_landscape_upper) { @content; }
-  }
-  @else if ($range == big_desktop_up) {
-    @media (min-width: $desktop_upper) { @content; }
-  }
+.button:hover {
+	
 }
 
 //functions
