--- a/src/style/current_project/index.scss
+++ b/src/style/current_project/index.scss
@@ -4,7 +4,7 @@ html {
 
 .main_screen {
 	@include SetBackground(solid, rgba(42, 42, 46, 1));
-	
+
 	.main_container-vertical {
 		@include SetWidth-responsive(1580);
 
@@ -38,5 +38,33 @@ html {
 		}
 
 	}
-
 }
+.main_container-grid {
+
+	@include SetWidth-responsive(1580);
+	@include SetGridVariables(3, 3, 1580,
+
+		$areas: (
+		"first": 500px,
+		"second": 200px,
+		"third": 100px,
+		),
+		$list_areas: ("first" "first" "first") ("first" "second" "third") ("third" "third" "third")
+		//целесообразнее всего добавить указание к каждой области на каждой строке ширину в список 
+	);
+
+	.first {
+		grid-area: first;
+	}
+
+	.second {
+		grid-area: second;
+	}
+
+	.third {
+		grid-area: third;
+	}
+}
+
+/*
+$map: ("first" 500px 1 4) ("second" 200px 2 3 5 6) ("third" 100px 7 8 9)
