--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -97,8 +97,8 @@
 	$rem-font: ($rem-scaler * $font-size)/$font_size-global;
 	$rem-line: ($rem-scaler * ($font-size + $line-height))/$font_size-global;
 
-	$vmin-font: ($vmin-scaler * $font-size)/GetDeviceScreen($mode, horizontal);
-	$vmin-line: ($vmin-scaler * ($font-size + $line-height))/GetDeviceScreen($mode, horizontal);
+	$vmin-font: ($vmin-scaler * $font-size)/min(GetDeviceScreen($mode, horizontal), GetDeviceScreen($mode, vertical));
+	$vmin-line: ($vmin-scaler * ($font-size + $line-height))/min(GetDeviceScreen($mode, horizontal), GetDeviceScreen($mode, vertical));
 
 	$vw-font: ($vw-scaler * $font-size)/GetDeviceScreen($mode, horizontal);
 	$vw-line: ($vw-scaler * ($font-size + $line-height))/GetDeviceScreen($mode, horizontal);
@@ -173,63 +173,229 @@
   grid-area: $name;
 }
 
-@mixin SetGridVariables($count_columns, $count_rows, $width, $areas, $list_areas) {
+@mixin SmartGrid($width, $LIST-rows) {
 
-  $count_columns-real;
+  $LIST-names_areas-row-map: ();
+  $LIST-exceptions-intel_stretch: ();
+  @each $row in $LIST-rows {
 
-  @for $i_1 from 1 through $count_rows {
+    $LIST-names_areas: ();
+    @each $name, $width-area in $row {
+      $LIST-names_areas: append($LIST-names_areas, $name);
+    }
+    $LIST-names_areas-row-map: append($LIST-names_areas-row-map, $LIST-names_areas);
+  }
 
-    @for $i_2 from 1 through $count_rows {
+  @for $indexer from 1 through length($LIST-names_areas-row-map) - 1 {
 
-      $sub-index: 1;
-
-      @while GetSubElementList($list_areas, $i_2, $sub-index) != null {
-
-        
-        $sub-index = $sub-index + 1;
-      }
+    @if LIST-GetSubElement($LIST-names_areas-row-map, $indexer, 1) == LIST-GetSubElement($LIST-names_areas-row-map, $indexer + 1, 1) {
+      $LIST-exceptions-intel_stretch: append($LIST-exceptions-intel_stretch, LIST-GetSubElement($LIST-names_areas-row-map, $indexer, 1));
+    }
+    @if LIST-GetSubElement($LIST-names_areas-row-map, $indexer, -1) == LIST-GetSubElement($LIST-names_areas-row-map, $indexer + 1, -1) {
+      $LIST-exceptions-intel_stretch: append($LIST-exceptions-intel_stretch, LIST-GetSubElement($LIST-names_areas-row-map, $indexer, -1));
     }
   }
-}
 
-/*
+  //интеллектуальное округление
+  $indexer-row: 1;
+  $LIST-width_area-all: ();
+  @each $row in $LIST-rows {
 
+    $width-real: 0;
 
-        @if($control_sum > $width) {
-          @debug "you are idiot";
+    $LIST-names_areas-row: ();
+    $LIST-width_area_100_ceil-row: ();
+    $width-real-CEILED: 0;
+    $indexer-area: 1;
+
+    @each $name, $width-area in $row {
+
+      $LIST-width_area_100_ceil-row: append($LIST-width_area_100_ceil-row, ceil($width-area/100) * 100);
+      $width-real: $width-real + $width-area;
+      $width-real-CEILED: $width-real-CEILED + nth($LIST-width_area_100_ceil-row, $indexer-area);
+      $LIST-names_areas-row: append($LIST-names_areas-row, $name);//каталог имен, идущих по порядку, чтоб можно было обратиться по имени в массив листареа
+      $indexer-area: $indexer-area + 1;
+    }
+    @debug $LIST-width_area_100_ceil-row;
+
+    @if $width > $width-real-CEILED or $width == $width-real-CEILED {
+
+      @for $indexer-area from 1 through length($row) {
+
+        $LIST-rows: set-nth($LIST-rows, $indexer-row, map-merge(nth($LIST-rows, $indexer-row), (nth($LIST-names_areas-row, $indexer-area):nth($LIST-width_area_100_ceil-row, $indexer-area))));
+        //$LIST-width_area-all: append($LIST-width_area-all, nth($LIST-width_area_100_ceil-row, $indexer-area));
+      }
+      @debug $LIST-rows;
+    }
+
+    @else {
+
+      $LIST-names_areas-row-width-10_ceil: ();
+      $width-real-CEILED: 0;
+      $indexer-area: 1;
+
+      @each $name, $width-area in $row {
+
+        $LIST-names_areas-row-width-10_ceil: append($LIST-width_area_100_ceil-row, ceil($width-area/10) * 10);
+        $width-real-CEILED: $width-real-CEILED + nth($LIST-names_areas-row-width-10_ceil, $indexer-area);
+        $indexer-area: $indexer-area + 1;
+      }
+      //@debug $LIST-names_areas-row-width-10_ceil;
+
+      @if $width > $width-real-CEILED or $width == $width-real-CEILED {
+
+        @for $indexer-area from 1 through length($row) {
+
+          $LIST-rows: set-nth($LIST-rows, $indexer-row, map-merge(nth($LIST-rows, $indexer-row), (nth($LIST-names_areas-row, $indexer-area):nth($LIST-names_areas-row-width-10_ceil, $indexer-area))));
+          //$LIST-width_area-all: append($LIST-width_area-all, nth($LIST-names_areas-row-width-10_ceil, $indexer-area));
+        }
+      }
+    }
+
+    $indexer-row: $indexer-row + 1; //шаг по строкам, чтоб можно было обратиться напрямую к конкретному элементу массива $LIST-rows
+  }
+
+  @debug "exceptions";
+  //создание списка исключений
+  @each $exception in $LIST-exceptions-intel_stretch {
+    $indexer-row: 1;
+    @each $row in $LIST-rows {
+      @each $name, $width-area in $row {
+        @if $name == $exception {
+          $LIST-rows: set-nth($LIST-rows, $indexer-row, map-merge(nth($LIST-rows, $indexer-row), ($name:LIST-MAP_GetSubMin-name($LIST-rows, $name))));
+        }
+      }
+      $indexer-row: $indexer-row + 1;
+    }
+  }
+  //поправка запись обновленных данных в общий список ширин всех областей
+  @each $row in $LIST-rows {
+    @each $name, $width-area in $row {
+
+      $LIST-width_area-all: append($LIST-width_area-all, $width-area);
+    }
+  }
+
+  @debug $LIST-rows;
+  $fraction: 0;
+
+  //фракционные вычисления
+  $LIST-width_area-all: append($LIST-width_area-all, $width);//список ширин областей ВО ВСЕХ строках + максимальная ширина строки В ПИКСЕЛЯХ
+  $indexer-row: 1;
+  //@debug $LIST-width_area-all;
+  @each $row in $LIST-rows {
+
+    $LIST-names_areas-row: ();//список имен всех областей в ТЕКУЩЕЙ строке
+    @each $name, $width-area in $row {
+      $LIST-names_areas-row: append($LIST-names_areas-row, $name);
+    }
+
+    $fraction: GCF($LIST-width_area-all);
+
+    $LIST-width_area-row-fr: ();//список ширин областей в ТЕКУЩЕЙ строке
+    $TOTAL_width_area-row-fr: 0;//реальная ширина ТЕКУЩЕЙ строки В ФРАКЦИЯХ
+    //расчет начального сдвига для списка
+    $index-shifter: 0;
+    $timer: $indexer-row - 1;
+    @while $timer > 0 {
+      $index-shifter: $index-shifter + length(nth($LIST-rows, $timer));
+      $timer: $timer - 1;
+    }
+
+    //расчет ширин в фракциях для областей в текущей строке + расчет реальной длины строки в фракциях
+    @for $indexer from 1 through length($row) {
+
+      $LIST-width_area-row-fr: append($LIST-width_area-row-fr, nth($LIST-width_area-all, $index-shifter + $indexer)/$fraction);
+      $TOTAL_width_area-row-fr: $TOTAL_width_area-row-fr + nth($LIST-width_area-row-fr, $indexer);
+    }
+
+    @debug LIST-width_area-row-fr $LIST-width_area-row-fr;
+
+    $max: nth($LIST-width_area-row-fr, 1);
+  	$max-index: 1;
+    $COUNTER-exception-row: 0;
+  	@for $indexer from 1 through length($LIST-width_area-row-fr) {
+  		@if $max < nth($LIST-width_area-row-fr, $indexer) and LIST-CheckInclude($LIST-exceptions-intel_stretch, nth($LIST-names_areas-row, $indexer)) == false {
+  			$max: nth($LIST-width_area-row-fr, $indexer);
+  			$max-index: $indexer;
+  		}
+      @if LIST-CheckInclude($LIST-exceptions-intel_stretch, nth($LIST-names_areas-row, $indexer)) {
+        $COUNTER-exception-row: $COUNTER-exception-row + 1;
+      }
+  	}
+    @debug counter $COUNTER-exception-row;
+
+    $REST-width_area-row: $width/$fraction - $TOTAL_width_area-row-fr;//остаток от максимальной ширины строки в ФРАКЦИЯХ
+    @debug rest $REST-width_area-row;
+    $width_area-fr-INCREMENT: $REST-width_area-row / (length($LIST-width_area-row-fr) - $COUNTER-exception-row);//среднее значение увеличения всех областей в строке для ликвидирования остатка В ФРАКЦИЯХ
+    @debug increment $width_area-fr-INCREMENT;
+
+    //intelligence stretcher
+    $indexer: 1;
+    @while $REST-width_area-row > 0 {
+
+      @if $indexer == $max-index {
+        $LIST-width_area-row-fr: set-nth($LIST-width_area-row-fr, $indexer, nth($LIST-width_area-row-fr, $indexer) + ceil($width_area-fr-INCREMENT));
+        $REST-width_area-row: $REST-width_area-row - ceil($width_area-fr-INCREMENT);
+      }
+      @else if LIST-CheckInclude($LIST-exceptions-intel_stretch, nth($LIST-names_areas-row, $indexer)) == false {
+        $LIST-width_area-row-fr: set-nth($LIST-width_area-row-fr, $indexer, nth($LIST-width_area-row-fr, $indexer) + floor($width_area-fr-INCREMENT));
+        $REST-width_area-row: $REST-width_area-row - floor($width_area-fr-INCREMENT);
+      }
+      $indexer: $indexer + 1;
+    }
+
+    @debug LIST-width_area-row-fr-increased $LIST-width_area-row-fr;
+
+    @for $indexer-area from 1 through length($row) {
+      $LIST-rows: set-nth($LIST-rows, $indexer-row, map-merge(nth($LIST-rows, $indexer-row), (nth($LIST-names_areas-row, $indexer-area):nth($LIST-width_area-row-fr, $indexer-area))));
+    }
+
+    $indexer-row: $indexer-row + 1
+  }
+
+  @debug $LIST-rows;
+
+  //формирование финальной строки
+  $width_row-fr: $width/$fraction;
+  grid-template-columns: repeat($width_row-fr, 1fr);
+  grid-template-rows: auto;
+  $STRING-name_area-all: "";
+  $LIST-name_area-all: ();
+  @debug $STRING-name_area-all;
+  @each $row in $LIST-rows {
+
+    $indexer-area: 1;
+    $STRING-name_area-all: "";
+    @each $name, $width_area-fr in $row {
+      @for $indexer from 1 through $width_area-fr {
+
+        $STRING-name_area-all: $STRING-name_area-all + $name;
+        @if $indexer-area != length($row) {
+          $STRING-name_area-all: $STRING-name_area-all + " ";
         }
         @else {
-
-          @if(GetSubElementList($list_areas, $i_2, $sub-index) != $temp) {
-            $control_sum = $control_sum + GetSubElementList($list_areas, $i_2, $sub-index);
+          @if $indexer != $width_area-fr {
+            $STRING-name_area-all: $STRING-name_area-all + " ";
           }
-
-          $temp: GetSubElementList($list_areas, $i_2, $sub-index);
         }
+      }
+      $indexer-area: $indexer-area + 1;
+    }
+    $LIST-name_area-all: append($LIST-name_area-all, BracketFunction($STRING-name_area-all));
+    @debug stringlocal BracketFunction($STRING-name_area-all);
 
-@while nth($map_element, $sub-index)!=null {
+  }
+  @debug listarea $LIST-name_area-all;
 
-  grid-template-columns: repeat($count_columns, 1fr);
-  grid-template-rows: auto;
-  $a1: "first";
-  $a2: "second";
-  $a3: "third";
-
-  $first: '"first second second"';
-  $second: '"first second second"';
-  $third: '"third third third"';
-  $var: $first + $second + $third;
-  @debug $var;
-
-  $first2: $a1 + " " + $a2 + " " + $a2;
-  @debug Shit($first2);
-
+  $STRING-grid: "";
+  @for $indexer from 1 through length($LIST-name_area-all) {
+    $STRING-grid: $STRING-grid + nth($LIST-name_area-all, $indexer);
+  }
+  @debug $STRING-grid;
   grid-template-areas:
-    #{$var};
-    */
-
-//padding-top: calc(#{$scaler * $up/$phone-small} * 100vh + #{(1 - $scaler) * $up * 1px});
-//padding-bottom: calc(#{$scaler * $down}/$phone-small} * 100vh + #{(1 - $scaler) * $down * 1px});
+    #{$STRING-grid};
+}
 
 
 //-transforms
